--- a/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Statistic/Statistic.cshtml
+++ b/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Statistic/Statistic.cshtml
@@ -1,9 +1,6 @@
-﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
-@*
+﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-<div>
-    <p>your score is:</p>
-</div>
+@using Online_English_Quiz_Project.Models
