--- a/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Display/Home.cshtml
+++ b/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Display/Home.cshtml
@@ -5,28 +5,92 @@
     string displayName = Context.Session.GetString("displayName");
 }
 @using Online_English_Quiz_Project.Models
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lunasima:wght@400;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;1,200;1,400&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+<style>
+    * {
+        /*border: 1px solid red;*/
+        font-family: 'Roboto', sans-serif;
+        
+    }
+
+    .Quizzes {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(4,1fr );
+        gap: 20px;
+        
+    }
+    .container{
+        width:calc(100% - 4rem);
+        padding: 2rem 2rem;
+    }
+    .title{
+        text-align:center;
+        font-size: 1.9rem !important;
+    }
+    .singleQuiz{
+        cursor: pointer;
+        box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+        text-align:center;
+        padding: 10px;
+        border-radius: 5px;
+        height:170px;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        font-size: 1.6rem;
+    }
+    .singleQuiz:hover{
+            background-color: rgba(3, 102, 214, 0.3);
+    }
+    a{
+        text-decoration:none;
+        font-weight: 600;
+        color: #fd647a;
+    }
+    .header{
+        display:flex;
+        justify-content:end;
+        font-size: 20px;
+        
+    }
+    .dropDown{
+        display:flex;
+        align-items:center;
+        justify-content:center;
+    }
+</style>
+<div class="container">
 <div class="header">
     @if (username != null)
     {
-        <div>
-            <p>@displayName</p>
-            <a href="/logout">logout</a>
+        <div class="dropDown">
+                <p>Hi, @displayName &nbsp</p>
+            <a href="/logout">Logout</a>
         </div>
     }
     else
     {
         <div>
-            <a href="/login">login</a>
+
+            <a href="/login">Login</a>
         </div>
     }
 
 </div>
-<h1>ONLINE ENGLISH EXAM</h1>
-<div class="Quizzes">
-    @foreach(Quiz q in ViewBag.Quizzes)
-    {
-        <div class="quiz" onclick="window.location.href='/quiz/@q.QuizId'">
-            <p>@q.QuizTitle</p>
-        </div>
-    }
+
+
+    <div class="title">
+        <h1>ONLINE ENGLISH EXAM</h1>
+    </div>
+    <div class="Quizzes">
+        @foreach (Quiz q in ViewBag.Quizzes)
+        {
+            <div class="singleQuiz" onclick="window.location.href='/quiz/@q.QuizId'">
+                <p>@q.QuizTitle</p>
+            </div>
+        }
+    </div>
 </div>
