--- a/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Display/Home.cshtml
+++ b/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Display/Home.cshtml
@@ -3,6 +3,7 @@
 @{
     string username = Context.Session.GetString("username");
     string displayName = Context.Session.GetString("displayName");
+    string role = Context.Session.GetString("role");
 }
 @using Online_English_Quiz_Project.Models
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,10 +50,11 @@
         text-decoration:none;
         font-weight: 600;
         color: #fd647a;
+        margin:10px;
     }
     .header{
         display:flex;
-        justify-content:end;
+        justify-content: space-between;
         font-size: 20px;
         
     }
@@ -66,10 +68,15 @@
 <div class="header">
     @if (username != null)
     {
-        <div class="dropDown">
-                <p>Hi, @displayName &nbsp</p>
-            <a href="/logout">Logout</a>
-        </div>
+            <p>Hi, @displayName &nbsp</p>
+            <div class="dropDown">
+                <a href="/">Home</a>
+                @if (role.Equals("admin"))
+                {
+                    <a href="/statistic">Statistic</a>
+                }
+                <a href="/logout">Logout</a>
+            </div>
     }
     else
     {
