--- a/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Statistic/Statistic.cshtml
+++ b/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Statistic/Statistic.cshtml
@@ -3,43 +3,130 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    string username = Context.Session.GetString("username");
+    string displayName = Context.Session.GetString("displayName");
+    string role = Context.Session.GetString("role");
 }
 @using Online_English_Quiz_Project.Models
-<div>
+@using Online_English_Quiz_Project.Models
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lunasima:wght@400;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;1,200;1,400&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+<style>
+    * {
+        /*border: 1px solid red;*/
+        font-family: 'Roboto', sans-serif;
+    }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+    }
+
+        .header a {
+            text-decoration: none;
+            font-weight: 600;
+            color: #fd647a;
+            margin: 10px;
+        }
+
+    .dropDown {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .container{
+        width:100%;
+        display:flex;
+    }
+    .left{
+        width:75%;
+        display:flex;
+    }
+    .right{
+        width:25%;
+    }
+    .score{
+        width:30%;
+    }
+    .history{
+        width:70%;
+    }
+
+    .examName {
+        cursor: pointer;
+        box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 3px;
+        text-align: center;
+        margin:10px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+        .examName:hover {
+        background-color: rgba(3, 102, 214, 0.3);
+    }
+    td{
+        border:1px solid;
+    }
+</style>
+<div class="header">
+    @if (username != null)
+    {
+        <p>Hi, @displayName &nbsp</p>
+        <div class="dropDown">
+            <a href="/">Home</a>
+            @if (role.Equals("admin"))
+            {
+                <a href="/statistic">Statistic</a>
+            }
+            <a href="/logout">Logout</a>
+        </div>
+    }
+    else
+    {
+        <div>
+
+            <a href="/login">Login</a>
+        </div>
+    }
+
+</div>
+<div class="container">
+    <div class="left">
+    <div class="score">
+    <h2>Score Distribution</h2>
     <table>
         <tr>
-            <td>A</td>
+            <td>8-10</td>
             <td>@ViewBag.Score[4]</td>
+            <td><a href="#">Details</a></td>
         </tr>
         <tr>
-            <td>B</td>
+            <td>6-8</td>
             <td>@ViewBag.Score[3]</td>
+            <td><a href="#">Details</a></td>
         </tr>
         <tr>
-            <td>C</td>
+            <td>4-6</td>
             <td>@ViewBag.Score[2]</td>
+                <td><a href="#">Details</a></td>
         </tr>
         <tr>
-            <td>D</td>
+            <td>2-4</td>
             <td>@ViewBag.Score[1]</td>
+                <td><a href="#">Details</a></td>
         </tr>
         <tr>
-            <td>F</td>
+            <td>0-2</td>
             <td>@ViewBag.Score[0]</td>
+            <td><a href="#">Details</a></td>
         </tr>
     </table>
-    <div>
-        @foreach (Quiz q in ViewBag.quiz)
-        {
-            <div class="quiz" onclick="window.location.href='/statistic/@q.QuizId'">
-                <p>@q.QuizTitle</p>
-            </div>
-        }
     </div>
-    <form asp-action="Statistic" asp-controller="Statistic" method="get">
-        <input name="quizId" value="0" hidden/>
-        <input type="submit" value="RESET"/>
-    </form>
+    <div class="history"> 
+    <h2>User Exam History</h2>
     <table>
         <tr>
             <td>user</td>
@@ -57,6 +144,19 @@
             </tr>
         }
     </table>
-
+        </div>
+    </div>
+    <div class="right">
+        @foreach (Quiz q in ViewBag.quiz)
+        {
+            <div class="examName" onclick="window.location.href='/statistic/@q.QuizId'">
+                <p>@q.QuizTitle</p>
+            </div>
+        }
+        <form asp-action="Statistic" asp-controller="Statistic" method="get">
+            <input name="quizId" value="0" hidden />
+            <input type="submit" value="RESET" />
+        </form>
+    </div>
 
 </div>
