--- a/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Authentication/Login.cshtml
+++ b/Online_English_Quiz_Solution/Online_English_Quiz_Project/Views/Authentication/Login.cshtml
@@ -6,8 +6,65 @@
 }
 @using Online_English_Quiz_Project.Models
 @model User
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lunasima:wght@400;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;1,200;1,400&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+<style>
+    .container{
+        position:fixed;
+        top:50%;
+        left:50%;
+        transform:translate(-50%,-50%);
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.1rem;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding:30px;
+        list-style:none;
+    }
+
+    input{
+        width:400px;
+        border:2px solid gray;
+        border-radius:5px;
+        height:50px;
+        margin-bottom: 30px;
+        padding:3px;
+        padding-left: 20px;
+    }
+    input:focus{
+        outline: none;
+            border: 3px solid rgba(3, 102, 214, 0.3);
+
+    }
+    .button{
+        background-color: #fd647a;
+    }
+    p{
+        margin:0;
+        padding:0;
+        margin-bottom:5px;
+    }
+    .text-danger{
+        text-decoration:none;
+        color:red;
+        list-style:none;
+    }
+</style>
+<div class="container">
+    <h2>Login</h2>
 <form asp-controller="Authentication" asp-action="Login" method="post">
-    Username:<input type="text" asp-for="Username"/><br />
-    Password:<input type="password" asp-for="Password"/><br/>
-    <input type="submit" value="LOGIN"/>
+    <p>Username:</p>
+    <input type="text" asp-for="Username" placeholder="Username"/>
+    <p>Password:</p>
+    <input type="password" asp-for="Password" placeholder="Password"/><br />
+
+     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div>
+        <input class="button" type="submit" value="LOGIN" />
+    </div>
+
 </form>
+</div>
